<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Slick UPnP</string>
    <string name="app_version" translatable="false">1.1.1</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="info_searching">Reloading...</string>
    <string name="info_errorlist_folders">Error while listening folders</string>
    <string name="info_still_loading">The device is still being loaded, please wait and try again</string>
    <string name="info_could_not_start_activity">Could not start activity (not sure why, please contact developer)</string>
    <string name="info_no_handler">No application for handling this content type available</string>
    <string name="info_folder">Folder</string>
    <string name="info_file">File</string>
    <string name="info_items">items</string>
    <string name="info_no_wifi">Please enable your wireless connection</string>
    <string name="settings_title_devices">Devices</string>
    <string name="settings_validate_devices">Validate devices</string>
    <string name="settings_validate_devices_description">Do additional validation before displaying a device (slower)</string>
    <string name="settings_title_icons">Icons</string>
    <string name="settings_show_icons">Display icons</string>
    <string name="settings_show_icons_description">Display icons for folders and items</string>
    <string name="settings_hide_file_icons">Hide icons for files</string>
    <string name="settings_hide_file_icons_description">Hide icons for file entries</string>
    <string name="settings_show_device_icons">Display device icons</string>
    <string name="settings_show_device_icons_description">Download and display device icons</string>
    <string name="settings_title_files">Files</string>
    <string name="settings_show_extensions">Display file extensions</string>
    <string name="settings_show_extensions_description">Append extensions to file names</string>
    <string name="settings_about_title">About</string>
    <string name="settings_about_version">Version</string>
    <string name="settings_about_developer">Developer</string>
    <string name="settings_about_developer_name">Casper Jørgensen</string>
    <string name="settings_about_website">Website</string>
    <string name="settings_about_website_url">https://cajor.dk</string>
</resources>
